# ai_agent_forge_desktop

./: .CLAUDE.md  .env.example  .gitignore  CLAUDE.md  LICENCE.md  README.md  deploy.sh  docker-compose.yml  start.sh  stop.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  sidecar.spec  sidecar_entry.py
backend/app/: deps.py  main.py
backend/app/api/: auth.py  bridge.py  chat.py  downloads.py  favorites.py  files.py  notifications.py  tasks.py  workspaces.py
backend/app/api/admin/: agents.py  approvals.py  cli_apps.py  departments.py  health.py  logs.py  mcp.py  models.py  packs.py  settings.py  skills.py  users.py
backend/app/core/: config.py  crypto.py  security.py  security_rules.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/runtime/: agent_runner.py  cli_apps_catalog.py  cli_apps_mcp.py  dag_executor.py  mcp_manager.py  pack_engine.py  permissions.py  skill_loader.py  widget_guidelines.py
backend/app/runtime/builtin_skills/: expert_builder.py  task_builder.py
backend/app/runtime/engines/: __init__.py  base.py  builtin.py  cli_engines.py  registry.py
backend/app/schemas/: __init__.py
backend/app/services/: audit.py  bridge_manager.py  capability_summarizer.py  croniter_compat.py  downloads.py  file_cleanup.py  file_parser.py  local_model_scan.py  mailer.py  mineru_client.py  provider_presets.py  skill_market.py  skill_scan.py  task_runner.py  wecom_crypto.py
backend/app/ui_schema/: types.py
backend/app/ui_schema/adapters/: hotel_demo.py
backend/scripts/: export_builtin.py
(+85 files in other folders)
