[project]
name = "h3c-agent-backend"
version = "0.1.0"
description = "H3C Agent SaaS backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # SQLite async driver (desktop single-user mode). Postgres drivers below
    # are kept for the legacy server deployment.
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.9",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anyio>=4.4",
    "claude-agent-sdk>=0.1.0",
    "openai>=1.50",
    "cryptography>=43",
    # 企业微信回调消息 AES-CBC 加解密（WXBizMsgCrypt 方案）。
    "pycryptodome>=3.20",
    "aiofiles>=23",
    # File parsing fallbacks (used when MinerU is disabled or fails)
    "pypdf>=5.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    # Feishu (Lark) long-connection bridge — WebSocket relay, no public URL needed.
    "lark-oapi>=1.6",
    # 企业微信智能机器人长连接（WebSocket）桥接客户端。
    "websockets>=12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
